@@ -5,6 +5,5 @@ memcached_SOURCES = memcached.c slabs.c items.c memcached.h assoc.c
 DIST_SUBDIRS = doc
 EXTRA_DIST = doc TODO
 
-CFLAGS=-g -O2 -static -DNDEBUG
-
+AM_CFLAGS=-DNDEBUG
 
